--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,50 +1,59 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Burgers!</title>
-  <script src="https://code.jquery.com/jquery.js"></script>
-</head>
 
-<ul>
-  {{#each burgers}}
-    <li>
-      <p>
-        {{id}}. {{burger_name}}
+<div class="row">
+  <div class="col-lg-3"></div>
+  <div class="col-lg-3" id="special-burger">
+<h2>What would you like to order?</h2>
+<form class="create-form">
 
-        <button data-burgerid="{{this.id}}" class="delburger">Devour</button>
-      </p>
-    </li>
-  {{/each}}
-</ul>
+  <div class="form-group">
+    <label for="ca">Your order goes here:</label>
+    <input type="text" id="ca" name="name">
+  </div>
 
+  <div class="form-group" id ="radio-button">
+    <label for="eaten">Add it to your order!</label><br>
 
-   <h2>Add a Burger to Devour</h2>
-<form action="/" method="POST" id="addBurger" class="button-size">
-	<textarea type="text" name="burger"></textarea>
-	<button type="submit">Add Burger!</button>
+  </div>
+
+  <button type="submit" id="add-burger">Add Burger</button>
 </form>
+<br>
+  </div>
 
-<script type="text/javascript">
+  
 
-  $("#addBurger").on("submit", function(event){
-      event.preventDefault();
 
-      var newBurger = {
-          burger: $("#addBurger [name=burger").val().trim()
-      };
-      // Send the POST request
-      $.ajax("/api/burgers", {
-          type: "POST",
-          data: newBurger
-      }).then(
-          function(){
-              console.log("added new burger");
-              //Reload the page to get the updated list
-              location.reload().
-          }
-      )
-  });
+<br>
 
-</script>
+<div class="col-lg-1"></div>
+  <div class="col-lg-3" id="orders">
+<h2>Order Up!</h2>
+<ol>
+  {{#each burgers}}
+    {{#if eaten}}
+      {{> burgers/burger-block eat=false}}
+    {{/if}}
+  {{/each}}
+</ol>
+  </div>
+</div>
+<div class="row">
+<div class="col-lg-6"></div>
+<div class="col-lg-4" id="eat">
+
+<h2>Burgers that you've eaten!</h2>
+
+<ol>
+  {{#each burgers}}
+    {{#unless eaten}}
+      {{> burgers/burger-block eat=true}}
+    {{/unless}}
+  {{/each}}
+</ol>
+
+</div>
+
+</div>
+<br>
+
 </html>
