--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -2,10 +2,21 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Burgers!</title>
+     <link rel="stylesheet" href="/assets/css/burger_style.css" type="text/css" />  <title>Burgers!</title>
   <script src="https://code.jquery.com/jquery.js"></script>
+  <script src="../assets/js/burgers.js"></script>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
 <body>
+  <header>Burger---Burger---Burger---Burger---Burger---Burger---Burger---Burger</header>
+  
+<div class="jumbotron jumbotron-fluid" id="header">
+  <div class="container">
+    <h1 class="display-4" id="title"></h1>
+    <p class="lead"></p>
+  </div>
+</div>
+
   {{{ body }}}
 </body>
 </html>
